Validation and required fields for VolunteerForm

--- a/Road to Recovery/pages/assets/css/pages.css
+++ b/Road to Recovery/pages/assets/css/pages.css
@@ -23,6 +23,9 @@
 /* ===========
   Timeline
  =============*/
+
+.required{  color:red;}
+
 .timeline {
   border-collapse: collapse;
   border-spacing: 0;
