lowered the width of Origin - Destination column in manageRidePats

--- a/Road to Recovery/pages/assets/css/pages.css
+++ b/Road to Recovery/pages/assets/css/pages.css
@@ -1300,3 +1300,11 @@ h3.timeline-title {
   margin-bottom: 40px;
   line-height: 26px;
 }
+
+.customWidth {
+    width: 10% !important;
+}
+
+.middle {
+    vertical-align: middle !important;
+}
