added weekly rides pages

--- a/Road to Recovery/pages/assets/css/pages.css
+++ b/Road to Recovery/pages/assets/css/pages.css
@@ -1305,6 +1305,14 @@ h3.timeline-title {
     width: 10% !important;
 }
 
+.dateCustomWidth {
+    width: 8% !important;
+}
+
+.timeCustomWidth {
+    width: 5% !important;
+}
+
 .middle {
     vertical-align: middle !important;
 }
