Added messages log on viewPatient.html and fixed equipment messages on ridePatForm.html

--- a/Road to Recovery/pages/assets/css/pages.css
+++ b/Road to Recovery/pages/assets/css/pages.css
@@ -1305,6 +1305,10 @@ h3.timeline-title {
     width: 10% !important;
 }
 
+.SmallcustomWidth {
+    width: 7% !important;
+}
+
 .dateCustomWidth {
     width: 8% !important;
 }
