viewVolunteer front-end work add call and see change right away columns width and more...

--- a/Road to Recovery/pages/assets/css/viewVolunteer.css
+++ b/Road to Recovery/pages/assets/css/viewVolunteer.css
@@ -106,3 +106,12 @@ button:disabled:hover {
 .futureRide {
     color: #0022f9;
 }
+
+#DocumentedCallTable_filter {
+    margin-left: -5px;
+}
+
+/*override bs */
+#overRideBS_modal_4changeClose_x {
+    font-size: 25px;
+}
