1. hide candidatesBtn in manageridepat.html 2. cursor: not-allowed on controls viewVolunteer.css      viewVolunteer.html 1. Amir's req ui can choose either free text or ddl content to doc a call 2. deleteBtn goes to the left 3. LastModified now presrents in dots as sepreators 4. columns width change 5. date in the doc  call or ride is as 3.9.2020 instead of 03.09.2020 6. supports in see the change of adding a call right away

--- a/Road to Recovery/pages/assets/css/viewVolunteer.css
+++ b/Road to Recovery/pages/assets/css/viewVolunteer.css
@@ -37,11 +37,14 @@
 
 /*
     x button on top left of
-    calls doesnt compile with
+    calls 
+    doesnt compile with
     that funcionality
     so I make him ↓
 */
-button:disabled:hover {
+button:disabled:hover,
+select:disabled:hover,
+textarea:disabled:hover {
     cursor: not-allowed;
 }
 
@@ -115,3 +118,4 @@ button:disabled:hover {
 #overRideBS_modal_4changeClose_x {
     font-size: 42px;
 }
+
