--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -2,3 +2,82 @@
     text-align: center;
 }
 
+#overRideBS_modal_4changeClose_x {
+    font-size: 42px;
+}
+
+#overRideBS_card-box {
+    padding: 40px;
+}
+
+#allSortsLabel {
+    vertical-align: -webkit-baseline-middle;
+    font-size: 18px;
+    color: #505458;
+    font-family: 'Roboto', sans-serif;
+    margin-left: 10px;
+}
+
+/* cool switch */
+/*source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch*/
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+input:checked + .slider {
+    background-color: #3bafda;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+    .slider.round:before {
+        border-radius: 50%;
+    }
+
+/* cool switch */
