manageRidePat --before Amir's testing-- finish working on filters module
supports in remove and add new areas to DB
when area rmoved from DB (rare)
ls is Initialized and page relodes as 4 now.

--before Amir's testing--

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -2,9 +2,9 @@
     text-align: center;
 }
 
-#overRideBS_modal_4changeClose_x {
+/*#overRideBS_modal_4changeClose_x {
     font-size: 42px;
-}
+}*/
 
 #overRideBS_card-box {
     padding: 40px;
