manageRidePats filters module - fixing Amir's&Benny's notes and in addition. Removing the option of displaying ridepats  of the logged-in coordinator only. Now all ridepats can be seen by any

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -18,6 +18,13 @@
     margin-left: 10px;
 }
 
+#bsModal_lowerHeadline{
+   color: red;
+}
+
+.overRideBS_label{
+    font-weight: normal;
+}
 /* cool switch */
 /*source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch*/
 .switch {
