mainly manageridepats but not only
files: ridepat.cs, manageridepats.css&html, master.js, patientfrom.html

add featchers:
1. add phonenumber to patient name patient/escorts number
2. show number of escorts
3. name of patient (who is not anonymous) is functional like a link to its edit page
4. show in text the ridepat equipments if exist

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -98,7 +98,17 @@ input:checked + .slider:before {
 
 /* cool switch */
 
-.numOfEscorts {
+.numOfEscorts, .phone2render {
     display: block;
     font-weight: bold;
+}
+
+.customWidth4column{
+    width: 10vw;
+}
+
+.clickable:hover {
+    cursor: pointer;
+    color: mediumblue;
+    border-bottom: solid mediumblue 1px;
 }
