manageridepat.html mainly (see details below)
1. add remark to GetRidePatView method
2. add equipemtns icons (png)
3. some new styles to the new makeover
4.  create global function addSeperator2MobileNum in master.js
5. over all makeover of manageridepat.html - a lot of work arround buildtable function
6. patientform and volunteer form now support go back functionality (since it reachable from more then 1 place)

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -111,4 +111,18 @@ input:checked + .slider:before {
     cursor: pointer;
     color: mediumblue;
     border-bottom: solid mediumblue 1px;
+    max-width: fit-content;
+                /*↑ works great in chrome*/
+}
+
+.driverName, .driverCellPhone {
+    display: block;
+}
+
+.equipments{
+    text-align: left;
+}
+
+.equipments-img{
+    height: 2vh;
 }
