manageRidePat module working
1. patientForm: when create new anonymous escort now it actually mark as such
2.  manageridepat
     a. fix dates sort in future ridepats
     b. change pagelength to 100  hardcoded
     c. some decorative work
3. ridepat.cs add read of isAnonymous of an escort which read when get an array of ridepats (change the view in sql as well )
4.  Escorted.cs add parmeter of isAnonymous of write new escort

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -100,7 +100,6 @@ input:checked + .slider:before {
 
 .numOfEscorts, .phone2render {
     display: block;
-    font-weight: bold;
 }
 
 .customWidth4column{
@@ -129,4 +128,8 @@ input:checked + .slider:before {
 
 .blueFont {
     color: rgb(40,96,145);
+}
+
+.boldFont {
+    font-weight: bold;
 }
