datatables navbar counter real time
initialize a counter to each table.
multiples changes on 1 ridepat count only once.
counters are
1. updating in real-time
2. initialized to zero when refresh and then counts the existing which in the last 2 hours range and set the counters accordingly.

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -185,3 +185,9 @@ input:checked + .slider:before {
 .hidden {
     visibility: hidden;
 }
+
+.lastModified_counter{
+    float: left;
+    margin-left: 20px;
+    font-size: 1.15em;
+}
