--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -186,7 +186,7 @@ input:checked + .slider:before {
     visibility: hidden;
 }
 
-.lastModified_counter{
+.lastModified_counter {
     float: left;
     margin-left: 20px;
     font-size: 1.15em;
@@ -197,6 +197,8 @@ input:checked + .slider:before {
     padding: 6px 26px;
 }
 
-.fa-remove:before, .fa-close:before, .fa-times:before {
+.fa-remove:before,
+.fa-close:before,
+.fa-times:before {
     color: red;
 }
