--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -192,6 +192,9 @@ input:checked + .slider:before {
     font-size: 1.15em;
 }
 
+.lastModified_Records{
+    text-decoration-line: underline;
+}
 /*override bootstrap*/
 .panel-group .panel-heading {
     padding: 6px 26px;
