--- a/Road to Recovery/pages/assets/css/viewCandidates.css
+++ b/Road to Recovery/pages/assets/css/viewCandidates.css
@@ -149,3 +149,8 @@ textarea:disabled:hover {
 .badge {
     width: 30px;
 }
+
+.btnsInSameLine {
+    display: flex;
+    justify-content: space-between;
+}
