generalize ShowMe functionality and apply on candidates as well

--- a/Road to Recovery/pages/assets/css/components.css
+++ b/Road to Recovery/pages/assets/css/components.css
@@ -1947,3 +1947,19 @@ table.dataTable td.focus {
 .widget-icon .wid-icon-info {
     margin-right: 80px;
 }
+
+.clickable:hover {
+    cursor: pointer;
+    color: mediumblue;
+    border-bottom: solid mediumblue 1px;
+    max-width: fit-content;
+    /*↑ works great in chrome*/
+}
+
+.blueFont {
+    color: rgb(40,96,145);
+}
+
+.boldFont {
+    font-weight: bold;
+}
