UpdateDriver from manageRidepats module V3
- highlight Row when consider assigning driver
- edit title modal text שיבוץ/עדכון

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -244,3 +244,6 @@ input:checked + .slider:before {
     position: fixed !important;
 }
 
+.highlightRow {
+    background-color: rgb(198, 220, 255) !important;
+}
