new volunteer indication module on manageridepats page
as spoke with Yael, the definition of new volunteer is one who drove less or equal then 3 drives

--- a/Road to Recovery/pages/assets/css/components.css
+++ b/Road to Recovery/pages/assets/css/components.css
@@ -1960,6 +1960,10 @@ table.dataTable td.focus {
     color: rgb(40,96,145);
 }
 
+.redFont{
+    color: red;
+}
+
 .boldFont {
     font-weight: bold;
 }
