--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -145,9 +145,14 @@ input:checked + .slider:before {
     direction: ltr;
 }
 
-.btnsInSameLine {
+.elementsInSameLine {
     display: flex;
     justify-content: space-between;
+}
+
+.verticalAllign {
+    display: grid;
+    align-content: center;
 }
 
 .within2HoursSinceChange {
@@ -246,4 +251,8 @@ input:checked + .slider:before {
 
 .highlightRow {
     background-color: rgb(198, 220, 255) !important;
+}
+
+.purpleFont {
+    color: rgb(178, 0, 255);
 }
