--- a/Road to Recovery/pages/assets/css/viewCandidates.css
+++ b/Road to Recovery/pages/assets/css/viewCandidates.css
@@ -150,7 +150,7 @@ textarea:disabled:hover {
     width: 30px;
 }
 
-.btnsInSameLine {
+.elementsInSameLine {
     display: flex;
     justify-content: space-between;
 }
