--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -271,6 +271,7 @@ input:checked + .slider:before {
 .timeUnderStatus {
     margin-left: auto;
     margin-right: 0;
+    font-weight: bold;
 }
 
 .column {
