--- a/Road to Recovery/pages/assets/css/components.css
+++ b/Road to Recovery/pages/assets/css/components.css
@@ -95,6 +95,11 @@
     border: 1px solid #3bafda !important;
 }
 
+table tr td div .btn-busy {
+    background-color: #efa834 !important;
+    border: 1px solid #efa834 !important;
+}
+
     .btn-primary:hover,
     .btn-primary:focus,
     .btn-primary:active,
