--- a/Road to Recovery/pages/assets/css/viewVolunteer.css
+++ b/Road to Recovery/pages/assets/css/viewVolunteer.css
@@ -14,7 +14,7 @@
     text-align: right;
 }
 
-#documentAcallPlusBtn {
+#documentAcallPlusBtn, #documentAAbsencePlusBtn {
     width: 30px;
     height: 30px;
     padding: 6px 0px;
@@ -24,11 +24,29 @@
     line-height: 1.42857;
     margin-bottom: 2vh;
 }
+.AbsencePlusBtn {
+    display: flex;
+    justify-content: flex-end;
+}
+#documentAAbsencePlusBtn {
+    width: 30px;
+    height: 30px;
+    padding-block:20px;
+    padding-inline:20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    background-color: #00b19d;
+    border-radius:50%;
+}
 
-#wrap_DocumentAcallsModal {
+
+#wrap_DocumentAcallsModal, #wrap_DocumentAAbsencesModal {
     height: 35vh;
     border: solid 1px black;
 }
+
 
 .redTxt {
     color: red;
@@ -48,11 +66,11 @@ textarea:disabled:hover {
     cursor: not-allowed;
 }
 
-#DocumentAcallsModal {
+#DocumentAcallsModal, #DocumentAAbsencesModal {
     position: inherit;
 }
 
-#overRideBS_modal-dialog {
+#overRideBS_modal-dialog, #overRideBS_modal-dialog-Absence {
     border: 2px solid;
     margin: 0;
     width: 820px;
@@ -66,7 +84,7 @@ textarea:disabled:hover {
     width: 10vw;
 }
 
-#DocumentAcallTable {
+#DocumentAcallTable, #DocumentAAbsenceTable {
     border-collapse: separate;
     border-spacing: 1em;
 }
@@ -75,7 +93,13 @@ textarea:disabled:hover {
 #DocumentAcallTime,
 #DocumentAcall_choooseCoordinator,
 #DocumentAcall_choooseContent,
-#DocumentAcall_writeContent {
+#DocumentAcall_writeContent,
+#DocumentAAbsenceDatePickerFrom,
+#DocumentAAbsenceDatePickerUntil,
+#DocumentAAbsenceTime,
+#DocumentAAbsence_choooseCoordinator,
+#DocumentAAbsence_choooseContent,
+#DocumentAAbsence_writeContent {
     width: 20vw;
 }
 #DocumentAcall_choooseCoordinator {
@@ -97,11 +121,11 @@ textarea:disabled:hover {
     width: 70px;
 }
 
-#overRideBS_modal_4changeBg {
+#overRideBS_modal_4changeBg, #overRideBS_modal_4changeBg-Absence {
     background: #f9f9f9;
 }
 
-#overRideBS_modal_4changelinesColor {
+#overRideBS_modal_4changelinesColor, #overRideBS_modal_4changelinesColor-Absence {
     border-top: 1px solid #948e8e;
     border-bottom: 1px solid #948e8e;
 }
@@ -110,12 +134,12 @@ textarea:disabled:hover {
     color: #0022f9;
 }
 
-#DocumentedCallTable_filter {
+#DocumentedCallTable_filter, #DocumentedAbsenceTable_filter {
     margin-left: -5px;
 }
 
 /*override bs */
-#overRideBS_modal_4changeClose_x {
+#overRideBS_modal_4changeClose_x, #overRideBS_modal_4changeClose_x-Absence {
     font-size: 42px;
 }
 
