--- a/Road to Recovery/pages/assets/css/components.css
+++ b/Road to Recovery/pages/assets/css/components.css
@@ -1068,7 +1068,7 @@ th {
 .table > tfoot > tr > th,
 .table > thead > tr > td,
 .table > thead > tr > th {
-    border-top: 1px solid #f3f3f3;
+    border-top: 1px solid #bfbfbf
 }
 
 .table > thead > tr > th {
