--- a/Road to Recovery/pages/assets/css/core.css
+++ b/Road to Recovery/pages/assets/css/core.css
@@ -1787,7 +1787,9 @@ pre {
 .text-left-strong {
     text-align: left;
 }
-
+.text-right-strong{
+    text-align:right;
+}
 .pull-right > .dropdown-menu {
     left: 0;
     right: auto;
