add who change functionality +2
handle the display of the mark rides.
and handle the anony,ous rides render.

--- a/Road to Recovery/pages/assets/css/pages.css
+++ b/Road to Recovery/pages/assets/css/pages.css
@@ -1342,4 +1342,11 @@ h3.timeline-title {
     text-align:center
 }
 
-
+.toggleTitle{
+    display:none;
+}
+.whochange {
+    font-size: 12px;
+    font-weight: 600;
+    color: #0e199e
+}
