--- a/Road to Recovery/pages/assets/css/viewCandidates.css
+++ b/Road to Recovery/pages/assets/css/viewCandidates.css
@@ -5,6 +5,8 @@
     position: fixed;
     height: auto;
     width: 320px;
+    width:auto;
+    padding:10px;
     background-color: yellow;
     z-index: 1;
     color: black;
