all reject from abrham 17/11

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -38,6 +38,10 @@
     margin-left: 10px;
 }
 
+table.table-bordered.dataTable {
+    border-collapse: collapse !important;
+}
+
 
 .overRideBS_label {
     font-weight: normal;
