--- a/Road to Recovery/pages/assets/css/configScore.css
+++ b/Road to Recovery/pages/assets/css/configScore.css
@@ -7,6 +7,23 @@ body {
     padding: 20px;
     color: #333;
 }
+#backBTN {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 20px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+button {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
 
 .container {
     max-width: 1200px;
@@ -45,12 +62,19 @@ table {
         padding: 10px;
         font-weight: 500;
         font-size: 16px;
+        border-right: 1px solid #ddd;
     }
-.percentage_td{
-
+.paramTitle {
+    font-size: 22px;
+    border-bottom:1px solid #ddd;
+}
+.percentage_td {
 }
 .score_td {
     width: 30%;
+}
+table:hover{
+    transform:scale(1.05);
 }
 
 table td {
@@ -82,7 +106,7 @@ table td {
                 margin: 20px auto 0;
                 display: block;
                 transition: background-color 0.3s;
-                font-size: 16px;
+                font-size: 26px;
             }
 
     button#save-btn:hover {
