fix and additions update to 15/10/25

--- a/Road to Recovery/pages/assets/css/manageRidePats.css
+++ b/Road to Recovery/pages/assets/css/manageRidePats.css
@@ -324,3 +324,7 @@ tr td .ToRight {
     display: flex;
     justify-content: flex-start;
 }
+
+#wrapper table tr td .phones-patient-p {
+    margin: 0;
+}
